# frugalis

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  config.toml  docker-compose.yml  init_template.toml  justfile  llm_classifier_review.md  manual-test-shared-category-config.md  render.yaml  routing.toml.example
.claude/: .10x-cli-manifest.json
.claude/prompts/: m3l4-e2e-prompt.md
.github/: .10x-cli-manifest.json
.github/scripts/: guard-auth-compare.sh
.github/workflows/: ci.yml  deploy.yml
context/foundation/: infrastructure.md  lessons.md  prd.md  roadmap.md  shape-notes.md  tech-stack.md  test-plan.md
data/: fewshot_bootstrap.yaml
deploy/otel-collector/: config.yaml
docs/: classification.md  config-package.md  llm_classifier_review.md  manual-test-shared-category-config.md  persistence-package.md  research-protocol-translation-index.md
manual-test/: README.md  TEST.md  lib.sh  run.sh  test.sh
migrations/: 001_create_inferences.sql  003_add_prompt_char_count.sql  004_add_provider_cascade_columns.sql  005_add_token_and_attribution_columns.sql  V1__create_inferences.sql  V2__add_codex_headers.sql  V2__inferences_request_id_unique.sql
openapi/: completions.yaml  responses-shim.yaml
routing_examples/: routing-manual-tests.toml  routing-multi-provider.toml  routing-nvidia-nim.toml  routing-openrouter.toml  routing_unreachable.toml
scripts/: README.md  lib.sh  manual_tests.sh  manual_tests_cache.sh  test-codex-e2e.sh  test.sh
src/: app.rs  auth.rs  cache.rs  cli.rs  config.rs  dashboard.rs  fewshot_classifier.rs  intent_classificator.rs  intent_classifier.rs  main.rs  persistence.rs  protocol_translation.rs  quickstart.rs  routing.rs  telemetry.rs  test_util.rs  tests.rs
src/app/: cli.rs  mod.rs  test_helpers.rs
src/classification/: chain.rs  fewshot.rs  llm.rs  mod.rs  (+2 more)
static/: dashboard.css
templates/: base.html
(+357 files in other folders)
