[package]
name = "cerebrum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
base64 = "0.22.1"
subtle = "2.6.1"
tower = { version = "0.5.2", features = ["util"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls", "macros", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
askama = "0.16.0"
askama_web = { version = "0.16.0", features = ["axum-0.8"] }
regex = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tower-http = { version = "0.6.11", features = ["fs"] }

[dev-dependencies]
httpmock = "0.7"

