[package]
name = "cerebrum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
base64 = "0.22.1"
subtle = "2.6.1"
tower = { version = "0.5.2", features = ["util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["postgres", "sqlite", "runtime-tokio", "tls-rustls", "macros", "uuid", "chrono", "migrate"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
askama = "0.16.0"
askama_web = { version = "0.16.0", features = ["axum-0.8"] }
regex = "1"
toml = "0.8"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
async-trait = "0.1"
tower-http = { version = "0.6.11", features = ["fs", "limit", "cors", "auth", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio-stream = "0.1"
futures = "0.3"
hmac = "0.12"
sha2 = "0.10"
getrandom = "0.2"

[dev-dependencies]
httpmock = "0.7"
serial_test = "3"
testcontainers = "0.27"
